--- a/config-files/api-gateway.yml
+++ b/config-files/api-gateway.yml
@@ -4,4 +4,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761
+      defaultZone: http://localhost:8761/eureka
